Facades/js/openui5.template.css
/* ... */
/* Data widgets */
html[class*="sapUiTheme-sap_horizon"] .sapMLabel.exf-paginator-position {font-weight: normal; font-family: var(--sapFontFamily);}

/* Login prompt */
html[class*="sapUiTheme-sap_horizon"] .exf-loginprompt-panel .sapMPanelContent {border: none;}
html[class*="sapUiTheme-sap_horizon"] .exf-loginprompt-panel .sapMITBContent {background-color: var(--sapObjectHeader_Background); border-bottom: none;}
html[class*="sapUiTheme-sap_horizon"] .exf-loginprompt-panel .sapMPanelHdr {height: 3rem !important; line-height: 3rem !important; text-align: center;}
html[class*="sapUiTheme-sap_horizon"] .exf-loginprompt-panel {
    box-shadow: var(--sapContent_Shadow0);
}

/* account popup */
html[class*="sapUiTheme-sap_horizon"] .sapMInputBaseDisabledWrapper>.sapMInputBaseInner{
    color: var(--sapTextColor);
}

/* DARK MODE SPECIFIC CHANGES */
/* progress bar */
html.sapUiTheme-sap_horizon_dark .sapMPI {
    display: -webkit-box;
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: row;
    box-sizing: border-box;
    outline: none;
    background: #ffffff00;
    min-height: 1rem;
    padding: 0;
    border: none;
    border-radius: 0.5rem;
    overflow: hidden;
}

html.sapUiTheme-sap_horizon_dark .sapMPIDisplayOnly:not(.sapMPIBarDisabled) .sapMPIBarNeutral+.sapMPIBarRemaining, 
html.sapUiTheme-sap_horizon_dark .sapMPIBarNeutral+.sapMPIBarRemaining {
    background-color: #ffffff20;
}

html.sapUiTheme-sap_horizon_dark .sapMPIBarPositive+.sapMPIBarRemaining, 
html.sapUiTheme-sap_horizon_dark .sapMPIBarNeutral+.sapMPIBarRemaining, 
html.sapUiTheme-sap_horizon_dark .sapMPIBarNegative+.sapMPIBarRemaining, 
html.sapUiTheme-sap_horizon_dark .sapMPIBarCritical+.sapMPIBarRemaining {
    background-color: #ffffff20;
    border-color: #89919a;;
}

/* progress bar text left */
html.sapUiTheme-sap_horizon_dark .sapMPIDisplayOnly:not(.sapMPIBarDisabled) .sapMPIBarNeutral .sapMPIText.sapMPITextLeft, 
html.sapUiTheme-sap_horizon_dark .sapMPIBarNeutral .sapMPIText.sapMPITextLeft{
    color: var(--sapButton_Success_TextColor);
}

html.sapUiTheme-sap_horizon_dark .sapMBtn.exf-svg-icon > .sapMBtnInner > .sapMImg {
    filter: invert(50%) sepia(100%) saturate(500%) hue-rotate(180deg);
}

html.sapUiTheme-sap_horizon_dark .sapMTileCntContent > .sapMImageContent > img {
    filter: invert(50%) sepia(10%) saturate(500%) hue-rotate(165deg) brightness(100%) contrast(100%);
}

